@@ -6,6 +6,7 @@
 
 - Workaround some AMD OpenCL runtime segmentation faults
 - Allow bitcoin master key length not be exactly 96 byte a multiple of 16
+- Getting rid of OPTS_TYPE_HASH_COPY for Ansible Vault
 
 ##
 ## Bugs
